2007-04-03  Alp Toker  <alp@atoker.com>

	* UnmanagedMemoryStream.cs: Should not have a public Dispose().
	This behaviour is already provided by the base class.

2007-04-03  Alp Toker  <alp@atoker.com>

	* Stream.cs: CreateWaitHandle() obsolete in 2.0.

2007-03-18  Alp Toker  <alp@atoker.com>

	* UnmanagedMemoryStream.cs:
	* Directory.cs: Exception message typo fixes.

2007-03-11  Zoltan Varga  <vargaz@gmail.com>

	* UnmanagedMemoryStream.cs: Fix a warning.

2007-03-05  Miguel de Icaza  <miguel@novell.com>

	* Path.cs: Manually call FileStream and pass the new internal
	FileOptions.1 flag that means "This is a temporary file, use 600
	permissions". 

	* FileOptions.cs: Document the new private enum value.

2007-02-22  Dick Porter  <dick@ximian.com>

	* MonoIOError.cs: 
	* MonoIO.cs: Handle ERROR_CANNOT_MAKE.

2007-02-19	Eyal Alaluf <eyala@mainsoft.com>

	* DirectoryInfo.cs, Directory.cs: Use MonoNotSupported & MonoLimitation
	  attribute to tag that DirectorySecurity is not supported.

2007-02-19	Boris Kirzner <borisk@mainsoft.com>

	* Path.cs: fix order of InvalidPathChars on windows.

2007-01-31  Gert Driesen  <drieseng@users.sourceforge.net>

	* StreamReader.cs: Removed checks for non-existing directory or file,
	since these checks are also performed in FileStream.

2007-01-31  Gert Driesen  <drieseng@users.sourceforge.net>

	* FileStream.cs: Always resolve to absolute paths for exceptions, when not
	in anonymous mode.

2007-01-24 Gonzalo Paniagua Javier <gonzalo.mono@gmail.com>

	* StreamReader.cs: fix for bug #75526. We return earlier from Read () if
	the underlying stream might block or end on the next read.

2007-01-22  Miguel de Icaza  <miguel@novell.com>

	* DirectoryInfo.cs: Throw a better exception (accorind go the
	docs, UnauthorizedAccessException is thrown if the underlying
	platform does not support it and *also* if there are no
	permissions to access it, which is more convenient than the