@@ -59,7 +59,7 @@ namespace System {
 		 * Changes which are already detected at runtime, like the addition
 		 * of icalls, do not require an increment.
 		 */
-		private const int mono_corlib_version = 55;
+		private const int mono_corlib_version = 56;
 		
 		public enum SpecialFolder
 		{	// TODO: Determine if these windoze style folder identifiers 
